# smart-ralph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ralph  smart-ralph
docs/: DESIGN.md  ROADMAP.md
docs/decisions/: 001-dashboard-rich-then-textual.md  002-language-python-v1-ts-future.md  003-invocation-no-managed-python.md  004-claude-md-minimalism.md
lib/: ralph-events.sh
src/smart_ralph/: cli.py  dashboard.py  eventlog.py  ralph_client.py  supervisor.py
tests/: test_cli.py  test_dashboard.py  test_eventlog.py  test_ralph_client.py  test_ralph_events.py  test_supervisor.py
tests/_helpers/: run_supervisor.py  run_supervisor_broken_kill.py
tests/fixtures/fake_ralph/: checks_lockfile.sh  echo_env.sh  echo_stdout.sh  long_running.sh  writes_events.sh
tests/fixtures/fake_tools/: claude  gh
