[project]
name = "smart-ralph"
version = "0.1.0"
description = "Self-correcting supervisor for the ralph bash orchestrator"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
smart-ralph = "smart_ralph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_ralph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
